--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 <p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹，然后进入游戏并按下F3+T或退出世界重进即可。</p>
 <p>涉及模组特有物品均需使用<a href="#crafting_machine"><img src="items/crafting_machine.png" style="height:20px;" />合成器</a>来合成。</p>
 <p><a href="#block_sky_domain">空岛模块</a>默认不开启，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>并重复上述操作安装。</p>
-<p>模组部分参数可通过修改<a href="#config">配置文件</a>来修改。</p>
+<p>模组部分参数可通过修改<a href="#config">配置文件</a>datapacks/craftingpp/data/cpp/functions/config.mcfunction修改。</p>
 
-<p>模组大部分文字支持英文、简体中文、繁体中文。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>。</p>
+<p>模组大部分文字支持英文、简体中文、繁体中文。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <p>转载本文需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源、原始下载链接以及相同的许可协议。模组代码使用需遵守<a href="https://www.gnu.org/licenses/gpl.html">GNU GENERAL PUBLIC LICENSE v3.0</a>协议。请勿转载至网盘或文件存储平台，通讯类工具允许下载后分享。公益服务器可直接使用；非公益服务器需先联系我。</p>
 
@@ -105,7 +105,7 @@
 
 <h3 id="acknowledge">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
-<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu 天狼星black 折君 MC先生</p>
+<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu 天狼星black 折君 MC先生(繁体中文)</p>
 <p><span style="font-weight:bold;">指令参考</span>：<a href="http://www.mcbbs.net/?1963599">pineapple_</a> <a href="http://www.mcbbs.net/?160123">贰逼</a> ECS <a href="https://github.com/pca006132">pca</a> <a href="http://www.mcbbs.net/?720449">玄素</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://github.com/ustc-zzzz">zzzz_ustc</a> <a href="http://www.mcbbs.net/?1073223">乙烯_中国</a> <a href="https://github.com/switefaster">switefaster</a> 折君 <a href="http://www.mcbbs.net/?725858">⊙v⊙</a> Herobrinexia</p>
 <p><span style="font-weight:bold;">灵感参考</span>：<a href="http://teamcofh.com/">热力膨胀</a> <a href="https://botaniamod.net/">植物魔法</a> <a href="http://www.abyssalcraft.com/">深渊国度</a> <a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a> 盐</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">mcbbs中文论坛</a> <a href="https://www.mcmod.cn/">MCMOD百科</a> <a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a> <a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a> <a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a> <a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a></p>
