--- a/index.html
+++ b/index.html
@@ -4005,7 +4005,7 @@ scoreboard players set #rituals_time cppValue 1200
 
 <tr class="v1-8">
 	<th rowspan="90">1.8<br/><span class="lore">元素更新</span></th>
-	<th rowspan="90">2018年8月30日<br/><span class='lore'>1490 KB</span></th>
+	<th rowspan="90">2018年8月30日<br/><span class='lore'>1525 KB</span></th>
 	<td>游戏本体版本升级为1.13，不再支持1.13之前的版本。</td></tr>
 <tr class="v1-8"><td>修改资源包文字的代码名称、记分板、标签前缀为cpp，修改资源包以适应1.13，添加材质。</td></tr>
 <tr class="v1-8"><td>移除闪烁标语。</td></tr>
@@ -4126,8 +4126,13 @@ scoreboard players set #rituals_time cppValue 1200
 <tr class="v1-8"><td>现在炼药锅可将熔岩桶变为黑曜石和桶。</td></tr>
 <tr class="v1-8"><td>添加了生物投影仪，使用4附魔铁锭+刷怪笼+箱子+2附魔钻石+生命之灵合成。</td></tr>
 <tr class="v1-8"><td>生物投影仪每10秒生成一次生物，所需材料为鸡蛋和另两种，消耗经验4/8/32点。</td></tr>
-<tr class="v1-8"><td>移除除僵尸、骷髅、洞穴蜘蛛、蜘蛛、爬行者、烈焰人、蠹虫外的所有刷怪蛋合成配方。</td></tr>
+<tr class="v1-8"><td>移除除僵尸、骷髅、洞穴蜘蛛、蜘蛛、爬行者、烈焰人、蠹虫外的所有刷怪蛋合成配方。</td>
+<tr class="v1-8"><td>现在花岗岩、安山岩、闪长岩可替换圆石合成石制工具。</td></tr>
+<tr class="v1-8"><td>所有结构生成几率减半。</td>
+<tr class="v1-8"><td>图腾柱生成高度调整为1-224。</td></tr>
 </tbody></table>
+
+
 
 
 
