--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p><strong>什么是原版模组？</strong>原版模组一般是指在不修改Minecraft游戏本体的前提下，通过命令方块、ooc或数据包等方式，而非forge或liteloader等api来对游戏的可玩性做出修改。</p>
 
-<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1 m09d05</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
+<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1 m09d07</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
 <ul>
 <li>17种实用性的工具，帮你更好地改造大自然，更有超强压缩能力的压缩器，可压缩上亿个同类物品；</li>
 <li>5种不同的傀儡，替你钓鱼、种菜、挖矿、杀怪、喂食；</li>
@@ -77,7 +77,7 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1-m09d05.zip">craftingpp-1.8.1-m09d05</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1-m09d05.zip
+<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1-m09d07.zip">craftingpp-1.8.1-m09d07</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1-m09d07.zip
 ">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.zip">craftingpp-1.8</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.zip
 ">备用链接</a></li></td></tr>
@@ -3783,12 +3783,10 @@
 
 <tr><td><img class="normal" /><span><span class="normal_items egg"><br /></span></span></td>
 <th>先有鸡还是先有蛋？</th><td>是先有蛋</td><td>—</td><td>开启模组！</td><td>cpp:egg</td></tr>
-<tr><td><img class="normal" /><span><span class="normal_items chicken_spawn_egg"><br /></span></span></td>
-<th>羊村村长</th><td>我一定会回来的</td><td>—</td><td>先有鸡还是先有蛋？</td><td>cpp:sheep</td></tr>
 <tr><td><img class="normal" /><span><span class="normal_items zombie_spawn_egg"><br /></span></span></td>
-<th>僵尸博士的复仇</th><td>没有豌豆了，用你的剑吧</td><td>—</td><td>羊村村长</td><td>cpp:zombie</td></tr>
-<tr><td><img class="normal" /><span><span class="normal_items ocelot_spawn_egg"><br /></span></span></td>
-<th>铲屎官</th><td>喵喵喵</td><td>—</td><td>僵尸博士的复仇</td><td>cpp:ocelot</td></tr>
+<th>僵尸博士的复仇</th><td>没有豌豆了，用你的剑吧</td><td>—</td><td>先有鸡还是先有蛋？</td><td>cpp:zombie</td></tr>
+<tr><td><img class="normal" /><span><span class="colorful_items mob_projector"><br /></span></span></td>
+<th>生物培育</th><td>繁殖怪物？</td><td>—</td><td>僵尸博士的复仇</td><td>cpp:mob_projector</td></tr>
 <tr><td><img class="challenge" /><span><span class="normal_items smooth_stone"><br /></span></span></td>
 <th>红色有角</th><td>跑的比谁都快</td><td>100点经验</td><td>铲屎官</td><td>cpp:red_horn</td></tr>
 </tbody></table>
