--- a/index.html
+++ b/index.html
@@ -2765,7 +2765,7 @@
 
 <h3 id="potion_of_invulnerable">无敌药水 (Potion of Invulnerable)</h3>
 <p>无敌药水由<a href="#all_in_one_machine">多功能一体机</a>常温低压下酿造<a href="#enchanted_golden_apple">附魔金苹果</a>+粗制的药水得到。</p>
-<p>饮用后获得30秒的生命恢复III和3分钟的抗性提升V效果。</p>
+<p>饮用后获得3分钟的生命恢复IV、生命提升IV、抗性提升V效果。</p>
 
 <h3 id="cold_drink">冷饮 (Cold Drink)</h3>
 <p>冷饮由<a href="#all_in_one_machine">多功能一体机</a>低温高压下通过水瓶+<a href="#fruits">水果</a>得到。</p>
