--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p><strong>什么是原版模组？</strong>原版模组一般是指在不修改Minecraft游戏本体的前提下，通过命令方块、ooc或数据包等方式，而非forge或liteloader等api来对游戏的可玩性做出修改。</p>
 
-<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1 m10d12</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
+<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1 m10d15</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
 <ul>
 <li>多种实用工具，帮你更好地改造大自然，更有超强压缩能力的压缩器，可压缩上亿个同类物品；</li>
 <li>多种傀儡，替你钓鱼、种菜、挖矿、杀怪、喂食；</li>
@@ -78,7 +78,7 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1-m10d12.zip">craftingpp-1.8.1-m10d12</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1-m10d12.zip
+<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1-m10d15.zip">craftingpp-1.8.1-m10d15</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1-m10d15.zip
 ">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.zip">craftingpp-1.8</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.zip
 ">备用链接</a></li></td></tr>
@@ -4033,6 +4033,9 @@ scoreboard players set #plants_hybrid cppValue 20
 # 魔法树树叶转化基数，期望时间=基数/3(秒)
 scoreboard players set #leaves_grow_threshold cppValue 3600
 
+# 魔法树生长阶段数
+scoreboard players set #magic_tree_age_max cppValue 4
+
 # 元素之力消耗经验值
 scoreboard players set #blue_force_of_sky_xp cppValue 10
 scoreboard players set #green_force_of_water_xp cppValue 0
@@ -4436,7 +4439,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2018-10-12</p>
+<p>最后更新 2018-10-15</p>
 </footer>
 </article>
 </body></html>
