--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="introduction">简介</h2>
-<p id="introduction" style="color:red;">🎉欢迎来到《更多的合成》系列模组百科！</p>
+<p id="introduction" style="color:red;">🎉欢迎来到《更多的合成》百科！</p>
 
 <p><strong>什么是原版模组？</strong>原版模组一般是指在不修改Minecraft游戏本体的前提下，通过命令方块、ooc或数据包等方式，而非forge或liteloader等api来对游戏的可玩性做出修改。</p>
 
-<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1 m10d15</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
+<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
 <ul>
 <li>多种实用工具，帮你更好地改造大自然，更有超强压缩能力的压缩器，可压缩上亿个同类物品；</li>
 <li>多种傀儡，替你钓鱼、种菜、挖矿、杀怪、喂食；</li>
@@ -78,7 +78,7 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1-m10d15.zip">craftingpp-1.8.1-m10d15</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1-m10d15.zip
+<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1.zip">craftingpp-1.8.1</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1.zip
 ">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.zip">craftingpp-1.8</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.zip
 ">备用链接</a></li></td></tr>
@@ -108,26 +108,13 @@
 
 <h3 id="acknowledge">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
-<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu 天狼星black 折君 MC先生(繁体中文)</p>
+<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu 天狼星black 折君 匠魂 Gingerbread MC先生</p>
 <p><span style="font-weight:bold;">指令参考</span>：<a href="http://www.mcbbs.net/?1963599">pineapple_</a> <a href="http://www.mcbbs.net/?160123">贰逼</a> ECS <a href="https://github.com/pca006132">pca</a> <a href="http://www.mcbbs.net/?720449">玄素</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://github.com/ustc-zzzz">zzzz_ustc</a> <a href="http://www.mcbbs.net/?1073223">乙烯_中国</a> <a href="https://github.com/switefaster">switefaster</a> 折君 <a href="http://www.mcbbs.net/?725858">⊙v⊙</a> Herobrinexia</p>
 <p><span style="font-weight:bold;">灵感参考</span>：<a href="http://teamcofh.com/">热力膨胀</a> <a href="https://botaniamod.net/">植物魔法</a> <a href="http://www.abyssalcraft.com/">深渊国度</a> <a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a> 盐</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">mcbbs中文论坛</a> <a href="https://www.mcmod.cn/">MCMOD百科</a> <a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a> <a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a> <a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a> <a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a></p>
 <p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia</p>
-<p><span style="font-weight:bold;">经费支持</span>：墨鱼 <a href="https://github.com/ustc-zzzz">ustc_zzzz</a> 落天望月 <a href="https://github.com/switefaster">switefaster</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://afdian.net/@SPGoding">SPGoding</a></p>
+<p><span style="font-weight:bold;">经费支持</span>：墨鱼 倪采臣 SPGoding ustc_zzzz 落天望月 chyx switefaster</p>
 <p style="color:red;">感谢以上所有玩家，特别感谢对我们给予经费支持的玩家！</p>
-
-<h3 id="tips">🔧 技术性</h3>
-本系列模组分为以下5个部分，专业玩家可根据自身需要选择相应的内容。
-<table>
-<thead><tr><th>模组名称</th><th>数据包名称</th><th>内容</th></tr></thead>
-<tbody>
-<tr><td>合成器</td><td>crafting_machine</td><td>合成器与机械处理(更多的合成前置)</td></tr>
-<tr><td>更多的合成</td><td>craftingpp</td><td>生物修改|元素之力|机器|工具|饮食|熔炼|酿造|农业|仪式|装饰|原版</td></tr>
-<tr><td>更多的交易</td><td>tradepp</td><td>村民交易</td></tr>
-<tr><td>更多实用功能</td><td>utilitypp</td><td>自动种植|炼药锅|随机方块|箱子整理|混合台阶|竖台阶</td></tr>
-<tr><td>空域开端</td><td>begin_sky_domain</td><td>空岛基础进展</td></tr>
-</tbody></table>
-
 
 <!------------------------------------------------------------------------------------------------->
 <h2 id="index">索引</h2>
@@ -290,7 +277,8 @@
 </td></tr>
 
 <tr><td style="width:90px;text-align:right;background-color:#ddd;font-weight:bold;">实用工具</td><td>
-  <a href="#magnet"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -96px -80px;" class="colorful_items"></span>磁铁</a> 
+  <a href="#portable_crafting_table"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -128px -192px;" class="colorful_items"></span>便携式工作台</a> 
+· <a href="#magnet"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -96px -80px;" class="colorful_items"></span>磁铁</a> 
 · <a href="#time_conditioner"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -112px -80px;" class="colorful_items"></span>时间调节器</a> 
 · <a href="#time_checker"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -128px -80px;" class="colorful_items"></span>报时器</a> 
 · <a href="#origin_of_the_world"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -0px -96px;" class="colorful_items"></span>世界之源</a> 
@@ -403,6 +391,8 @@
 · <a href="#blue_jeans"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -128px -128px;" class="colorful_items"></span>牛仔裤</a> 
 · <a href="#snow_boots"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -0px -144px;" class="colorful_items"></span>雪地靴</a> 
 · <a href="#classical_painting"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -112px -208px;" class="colorful_items"></span>经典画作</a> 
+· <a href="#colorful_sign"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -16px -144px;" class="colorful_items"></span>彩色告示牌</a> 
+· <a href="#glass_item_frame"><span style="display:inline-block;width:16px;height:16px;background-size:144px 224px;background-position: -32px -144px;" class="colorful_items"></span>玻璃物品展示框</a> 
 · <a href="#stairs"><span style="display:inline-block;width:16px;height:16px;background-image:url('items/InvSprite.png');background-size:512px 1184px;background-position: -352px -448px;"></span>楼梯</a> 
 · <a href="#slabs"><span style="display:inline-block;width:16px;height:16px;background-image:url('items/InvSprite.png');background-size:512px 1184px;background-position: -80px -464px;"></span>台阶</a> 
 · <a href="#smooth_block"><span style="display:inline-block;width:16px;height:16px;background-image:url('items/InvSprite.png');background-size:512px 1184px;background-position: -400px -448px;"></span>平滑方块</a> 
@@ -2002,6 +1992,26 @@
 
 <img style="height:220px" src="items/screenshots/red_force_of_fire.png" /> <img style="height:220px" src="items/screenshots/blue_force_of_sky.png" />
 
+<h3 id="portable_crafting_table">便携式工作台 (Portable Crafting Table)</h3>
+<p>自动将附近物品吸引过来。主手持有右键依次切换范围为0/8/16米。若放置放物品展示框，可吸引附近16米的物品到所在处。</p>
+<p class="small">切换会导致改名或移除光泽的磁铁恢复为默认名称和光泽。</p>
+<table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
+<tr><th>便携式工作台</th><td>工作台+<a href="#experience_bottle">附魔之瓶</a></td>
+<td><span class="mcui"><span><span class="mcui_row"><span class="crafting_table" title="工作台">
+</span><span class="experience_bottle" title="附魔之瓶">
+</span><span class="empty">
+</span></span><span class="mcui_row"><span class="empty">
+</span><span class="empty">
+</span><span class="empty">
+</span></span><span class="mcui_row"><span class="empty">
+</span><span class="empty">
+</span><span class="empty">
+</span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
+<span class="colorful_items portable_crafting_table" title="便携式工作台">
+</span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。">
+</span></span></span></td></tr>
+</tbody></table>
+
 <h3 id="magnet">磁铁 (Magnet)</h3>
 <p>自动将附近物品吸引过来。主手持有右键依次切换范围为0/8/16米。若放置放物品展示框，可吸引附近16米的物品到所在处。</p>
 <p class="small">切换会导致改名或移除光泽的磁铁恢复为默认名称和光泽。</p>
@@ -2697,7 +2707,6 @@
 
 <h3 id="baked_carrot">烤胡萝卜 (Baked Carrot)</h3>
 <p>食用后恢复6点饥饿值。</p>
-<p class="small">若输出槽非空烧炼会停止。</p>
 <table class="normal"><thead><tr><th>产物</th><th colspan="2">烧炼配方</th></tr></thead><tbody>
 <tr><th>烤胡萝卜<br /><img src="items/hunger.png" style="width:18px;height:18px;" title="5" /><img src="items/hunger.png" style="width:18px;height:18px;" title="5" /><img src="items/hunger_half.png" style="width:18px;height:18px;" title="5" /></th><td>胡萝卜</td><td>
 <span class="mcui"><span><span class="mcui_row"><span class="carrot" title="胡萝卜">
@@ -2749,7 +2758,7 @@
 
 <h3 id="potion_of_chain">连环药水 (Potion of Chain)</h3>
 <p>连环药水由<a href="#all_in_one_machine">多功能一体机</a>常温低压下酿造<a href="#enchanted_iron">附魔铁锭</a>+粗制的药水得到。</p>
-<p>饮用后获得8分钟的<span id="#chain_effect">连锁</span>效果：不显示状态效果图标，显示赭色粒子效果，时间显示在快捷栏上方。玩家使用斧可一次性破坏相连的树、瓜、蘑菇方块、成熟的农作物，使用镐可一次性破坏15米内相连的矿石、黑曜石、变种石头，使用锹可一次性破坏10米内相连的沙砾、粘土块、沙子、灵魂沙。该效果受精准采集和时运影响，每次使用仅消耗1点耐久值。可使用节制器关闭。</p>
+<p>饮用后获得8分钟的<span id="#chain_effect">连锁</span>效果：不显示状态效果图标，显示赭色粒子效果，时间显示在快捷栏上方。玩家使用斧可一次性破坏相连的树、瓜、蘑菇方块、成熟的农作物，使用镐可一次性破坏15米内相连的矿石、黑曜石，使用锹可一次性破坏10米内相连的沙砾、粘土块、沙子、灵魂沙。该效果受精准采集、时运、耐久影响，消耗相应方块数量的耐久值。可使用节制器关闭。</p>
 
 <h3 id="potion_of_regeneration">再生药水 (Potion of Regeneration)</h3>
 <p>再生药水由<a href="#all_in_one_machine">多功能一体机</a>常温低压下酿造<a href="#ghast_tear">恶魂之泪</a>+粗制的药水得到。</p>
@@ -2815,7 +2824,7 @@
 <tr><td><strong>大丁草 (Gerbera)</strong></td><td>黑荆棘+香蒲草</td><td>火药</td></tr>
 <tr><td><strong>芦苇草 (Esparto)</strong></td><td>白车轴+风信子</td><td>线</td></tr>
 <tr><td><strong>亮连翘 (Glow Forsythia)</strong></td><td>香蒲草+风信子</td><td>荧石粉</td></tr>
-<tr><td><strong>碎璃草 (Glazed Shade)</strong></td><td>滇百合+紫荆花</td><td>海晶砂粒</td></tr>
+<tr><td><strong>碎璃草 (Glazed Shade)</strong></td><td>滇百合+紫荆花</td><td>海晶碎片</td></tr>
 <tr><td><strong>狼毒花 (Stelera)</strong></td><td>彼岸花+菖蒲草</td><td>蜘蛛眼</td></tr>
 <tr><td><strong>牧晶花 (Forage Crystal)</strong></td><td>白车轴+滇百合</td><td>恶魂之泪</td></tr>
 <tr><td><strong>异绒兰 (Isorchid)</strong></td><td>彼岸花+紫荆花</td><td>末影珍珠</td></tr>
@@ -3586,6 +3595,30 @@
 <p><img style="width:90%" src="items/screenshots/paintings.png" /></p>
 
 
+<h3 id="colorful_sign">彩色告示牌 (Colorful Sign)</h3>
+<p>主手持有告示牌、副手持有染料时，放置的告示牌会变成彩色。放置时若被其它告示牌遮挡，则变色效果将发生在中途的告示牌。</p>
+<p><img style="width:90%" src="items/screenshots/colorful_sign.png" /></p>
+
+
+<h3 id="glass_item_frame">玻璃物品展示框 (Glass Item Frame)</h3>
+<p>现在物品展示框默认为玻璃材质，放入物品后变为透明。副手持有木棍时为原来的材质。</p>
+<table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th><!--<th>原画</th>--></tr></thead>
+<tbody>
+<tr><th>玻璃物品展示框</th><td>玻璃板+皮革</td><td><span class="mcui"><span>
+<span class="mcui_row"><span class="glass_pane" title="玻璃板">
+</span><span class="glass_pane" title="玻璃板">
+</span><span class="glass_pane" title="玻璃板">
+</span></span><span class="mcui_row"><span class="glass_pane" title="玻璃板">
+</span><span class="leather" title="皮革">
+</span><span class="glass_pane" title="玻璃板">
+</span></span><span class="mcui_row"><span class="glass_pane" title="玻璃板">
+</span><span class="glass_pane" title="玻璃板">
+</span><span class="glass_pane" title="玻璃板">
+</span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
+<span class="colorful_items glass_item_frame" title="玻璃物品展示框">
+</span></span></span></td></tr>
+</tbody></table>
+
 <h3 id="stairs">楼梯 (Stairs)</h3>
 <p>修改合成得到的楼梯数量为8；新增17种楼梯回收为原方块。</p>
 
@@ -3686,8 +3719,7 @@
 
 
 <!------------------------------------------------------------------------------------------------->
-<h2 id="utilitypp">更多实用功能</h2>
-<p>该部分隶属模组《更多实用功能》。</p>
+<h2 id="utilitypp">实用功能</h2>
 
 <h3 id="cauldon">炼药锅</h3>
 <p>将染色玻璃扔进炼药锅可将其变为玻璃，并减少炼药锅一级水位。</p>
@@ -3830,7 +3862,7 @@
 <h2 id="block_sky_domain">空域开端</h2>
 <p>该模块仅在空岛模式(y=0无基岩)下启用。该模块旨在为空岛玩家提供从泥土到末地的完整科技链。玩家可以通过空无一物的超平坦进入，然后会在海平面高度生成一块基岩和永不消失的草方块。</p>
 <p>玩家破坏泥土/草方块会获得树苗(各1%)或骨粉(4%)，破坏树叶会掉落线(10%)或骨粉(10%)。</p>
-<p>在熔炉上方放置雪块可将其变成方块粉碎机，之后在其上方放置泥土/砂砾/圆石/石头/沙子/灵魂沙，然后右击方块粉碎机可以打碎该方块。掉落物如下：</p>
+<p>在熔炉上方放置雪块可将其变成方块破坏器，之后在其上方放置泥土/砂砾/圆石/石头/沙子/灵魂沙，然后右击方块破坏器可以打碎该方块。掉落物如下：</p>
 <table style="font-size:88%;"><thead><tr><th>方块</th><th colspan="13">掉落物</th></tr></thead><tbody>
 <tr><th rowspan="2">泥土</th>
 	<td>橡树树苗</td><td>云杉树苗</td><td>白桦树苗</td><td>丛林树苗</td><td>金合欢树苗</td><td>深色橡树树苗</td>
@@ -3844,7 +3876,7 @@
 	<td>砂砾</td><td>沙子</td><td>铁碎片</td><td>金碎片</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td>48%</td><td>20%</td><td>20%</td><td>12%</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><th rowspan="2">砂砾</th>
-	<td>燧石</td><td>煤炭碎片</td><td>铁碎片</td><td>金碎片</td><td>石英</td><td>青金石碎片</td><td>绿宝石碎片</td><td>钻石碎片</td>
+	<td>燧石</td><td>煤碎片</td><td>铁碎片</td><td>金碎片</td><td>石英</td><td>青金石碎片</td><td>绿宝石碎片</td><td>钻石碎片</td>
 	<td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td>20%</td><td>20%</td><td>20%</td><td>12%</td><td>10%</td><td>6%</td><td>6%</td><td>6%</td>
 	<td></td><td></td><td></td><td></td><td></td></tr>
@@ -3860,7 +3892,7 @@
 	<td></td><td></td><td></td><td></td><td></td></tr>
 </tbody></table>
 <p>当玩家背包含有4个矿石碎片会自动合成为对应的矿石。</p>
-<p>在方块粉碎机上方放置炼药锅，然后向炼药锅扔入4个圆石或4个雪球，可以制作岩浆或水。</p>
+<p>在方块破坏器上方放置炼药锅，然后向炼药锅扔入4个圆石或4个雪球，可以制作岩浆或水。</p>
 <p>将12个绿宝石块摆成末地传送门框架的形状，然后在正中间放置雪块即可得到末地传送门框架。</p>
 
 <h3>合成表</h3>
@@ -4353,19 +4385,21 @@ scoreboard players set #rituals_time cppValue 1200
 
 <tr class="v1-8"><td>玩家在空岛模式下会开启空岛模块。</td></tr>
 <tr class="v1-8"><td>空岛模块下破坏泥土/草方块会获得树苗(各1%)或骨粉(4%)，破坏树叶会掉落线(5%)或骨粉(20%)。</td></tr>
-<tr class="v1-8"><td>空岛模块下在熔炉上方放置雪块可得到方块粉碎机，可以粉碎其上方放置材料。</td></tr>
-<tr class="v1-8"><td>空岛模块下在方块粉碎机上方放置坩埚，然后向坩埚扔入4个圆石或4个雪球，可以制作岩浆或水。</td></tr>
+<tr class="v1-8"><td>空岛模块下在熔炉上方放置雪块可得到方块破坏器，可以粉碎其上方放置材料。</td></tr>
+<tr class="v1-8"><td>空岛模块下在方块破坏器上方放置坩埚，然后向坩埚扔入4个圆石或4个雪球，可以制作岩浆或水。</td></tr>
 <tr class="v1-8"><td>空岛模块下可使用绿宝石块和雪块制作末地传送门框架。</td></tr>
 <tr class="v1-8"><td>空岛模块下添加雪球、鸡蛋、圆石、砂砾的合成。</td></tr>
 
 <tr class="v1-8">
-	<th rowspan="55">1.8.1</th>
-	<th rowspan="55">2018年10月30日<br/><span class='lore'>1490 KB</span></th>
+	<th rowspan="67">1.8.1</th>
+	<th rowspan="67">2018年10月25日<br/><span class='lore'>2285 KB</span></th>
 	<td>所有结构生成几率减半。</td></tr>
 <tr class="v1-8"><td>图腾柱生成高度调整为1-224。</td></tr>
 <tr class="v1-8"><td>更改银河标准字母为月符字母。</td></tr>
 <tr class="v1-8"><td>现在沙子上可以生成死珊瑚扇。</td></tr>
 <tr class="v1-8"><td>新增小型灌木、死云杉树、作物田、魔法作物田。</td></tr>
+<tr class="v1-8"><td>上古卷轴出现在附魔室中。</td></tr>
+<tr class="v1-8"><td>修改结构几率和算法。</td></tr>
 
 <tr class="v1-8"><td>新增信标增强器，右击信标顶部放置，可为玩家提供正面效果，其它生物提供负面效果。</td></tr>
 <tr class="v1-8"><td>新增金砧，使用材料清除工具的惩罚等级、清除诅咒附魔、附加高级附魔。</td></tr>
@@ -4374,6 +4408,11 @@ scoreboard players set #rituals_time cppValue 1200
 <tr class="v1-8"><td>修改多功能一体机存储经验量最高为48。</td></tr>
 <tr class="v1-8"><td>修改交易机为不再直接获得附魔之瓶，而是先存储为经验值再转化。</td></tr>
 <tr class="v1-8"><td>修复了将物品放置在背景也能无序合成的错误。</td></tr>
+<tr class="v1-8"><td>加强了无敌药水的效果。</td></tr>
+<tr class="v1-8"><td>为多功能一体机安装插件不会再打开机器了。</td></tr>
+<tr class="v1-8"><td>修复多功能一体机被破坏后掉落的插件不正确。</td></tr>
+<tr class="v1-8"><td>现在支持机器朝向随放置玩家变化。</td></tr>
+<tr class="v1-8"><td>新增便携式工作台，右键放置，玩家远离时自动消失。</td></tr>
 
 <tr class="v1-8"><td>修改附魔之瓶默认存储经验值为9。</td></tr>
 <tr class="v1-8"><td>不再修改牧师的附魔之瓶交易价格。</td></tr>
@@ -4381,16 +4420,21 @@ scoreboard players set #rituals_time cppValue 1200
 <tr class="v1-8"><td>现在花岗岩、安山岩、闪长岩可替换圆石合成石制工具。</td></tr>
 <tr class="v1-8"><td>现在使用世界之源会传送至主世界。</td></tr>
 
+<tr class="v1-8"><td>修复烤胡萝卜的问题。</td></tr>
 <tr class="v1-8"><td>现在矿石树苗支持无序合成。</td></tr>
 <tr class="v1-8"><td>重新设计矿石树，现在矿石树有六种形态。</td></tr>
 <tr class="v1-8"><td>模组树生长时间加倍。</td></tr>
 <tr class="v1-8"><td>修复水果树树苗和矿石树树苗掉落的错误。</td></tr>
 <tr class="v1-8"><td>修复连锁砍树苹果掉率过高的问题。</td></tr>
 <tr class="v1-8"><td>修改了白车轴的材质。</td></tr>
+<tr class="v1-8"><td>碎璃草掉落海晶碎片而不是海晶砂粒。</td></tr>
 
 <tr class="v1-8"><td>仪式每次消耗的附魔之瓶数量修改为64。</td></tr>
 <tr class="v1-8"><td>现在属性附加支持海龟壳和鞘翅。</td></tr>
 <tr class="v1-8"><td>优化连锁效果算法。</td></tr>
+<tr class="v1-8"><td>现在连锁消耗实际破坏方块数量的耐久，支持耐久附魔。</td></tr>
+<tr class="v1-8"><td>现在主手持有扫帚时可悬浮。</td></tr>
+<tr class="v1-8"><td>新增流星丸，使用鞘翅+扫帚+7天空之翼合成，装备在胸甲并起飞后可自动飞行。</td></tr>
 
 <tr class="v1-8"><td>现在炼药锅可将海绵变为湿海绵。</td></tr>
 <tr class="v1-8"><td>现在炼药锅可将熔岩桶变为黑曜石和桶。</td></tr>
@@ -4402,12 +4446,16 @@ scoreboard players set #rituals_time cppValue 1200
 <tr class="v1-8"><td>重新设计荧光帽、原谅帽、非酋帽、护士帽、小红帽。</td></tr>
 <tr class="v1-8"><td>修改画作为经典画作，放置在物品展示框后随机显示一种画。</td></tr>
 <tr class="v1-8"><td>修改画作的材质修改为石剑。</td></tr>
+<tr class="v1-8"><td>新增16幅经典画作。</td></tr>
+<tr class="v1-8"><td>新增彩色告示牌，副手持有染料时放置即可。</td></tr>
+<tr class="v1-8"><td>现在物品展示框默认为透明，副手持有木棍时放置为原来的展示框。</td></tr>
+<tr class="v1-8"><td>重写竖台阶算法。</td></tr>
 <tr class="v1-8"><td>移除部分头饰。</td></tr>
-
 
 <tr class="v1-8"><td>末地使村民收购末影珍珠价格为14-16个。</td></tr>
 <tr class="v1-8"><td>修改村民收购海带和海草的价格为30-38个。</td></tr>
 <tr class="v1-8"><td>修改交易机收购海带和海草的价格为32个。</td></tr>
+<tr class="v1-8"><td>修改了交易机、春和福材质并更新了材质信息。</td></tr>
 <tr class="v1-8"><td>新增进度“生物培育”，移除两个失效的进度。</td></tr>
 
 <tr class="v1-8"><td>现在放置在下界的湿海绵会被干燥。</td></tr>
@@ -4420,9 +4468,8 @@ scoreboard players set #rituals_time cppValue 1200
 <tr class="v1-8"><td>空书架仅需6木板使用合成器合成。</td></tr>
 <tr class="v1-8"><td>破坏书架掉落空书架和3本书。</td></tr>
 <tr class="v1-8"><td>现在烧炼铁门和铁活板门可以获得铁锭。</td></tr>
+<tr class="v1-8"><td>修改空岛矿石碎片样式及算法。</td></tr>
 
-<tr class="v1-8"><td>为多功能一体机安装插件不会再打开机器了。</td></tr>
-<tr class="v1-8"><td>修复多功能一体机被破坏后掉落的插件不正确。</td></tr>
 
 </tbody></table>
 
@@ -4439,7 +4486,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2018-10-15</p>
+<p>最后更新 2018-10-25</p>
 </footer>
 </article>
 </body></html>
