--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p><strong>什么是原版模组？</strong>原版模组一般是指在不修改Minecraft游戏本体的前提下，通过命令方块、ooc或数据包等方式，而非forge或liteloader等api来对游戏的可玩性做出修改。</p>
 
-<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1</em>，支持<em>Minecraft Java版 1.13.1</em>。本次更新为<em>元素更新</em>，内容包括：</p>
+<p><strong>什么是《更多的合成》？</strong>《更多的合成》是国内论坛最大的原版模组，目前已更新至<em>1.8.1</em>，支持<em>Minecraft Java版 1.13.1-1.13.2</em>。本次更新为<em>元素更新</em>，内容包括：</p>
 <ul>
 <li>多种实用工具，帮你更好地改造大自然，更有超强压缩能力的压缩器，可压缩上亿个同类物品；</li>
 <li>多种傀儡，替你钓鱼、种菜、挖矿、杀怪、喂食；</li>
@@ -78,7 +78,7 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1.zip">craftingpp-1.8.1</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1.zip
+<tr><td>Minecraft Java版 1.13.1-1.13.2</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.1.zip">craftingpp-1.8.1</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.1.zip
 ">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.zip">craftingpp-1.8</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.zip
 ">备用链接</a></li></td></tr>
