--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
 <tr>
 	<td>Minecraft Java版 1.12</td>
 	<td>Crafting++ 1.7.4</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/blob/master/versions/1.7/v1.7.4.zip">github</a> | <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">mcbbs</a></td></tr>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/blob/master/versions/1.7/v1.7.4.zip">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.7.4.zip">官方</a></td>
+</tr>
 <tr>
 	<td>Minecraft Java版 1.12 pre</td>
 	<td>Crafting++ 1.6.1</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.6/v1.6.zip">github</a></td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.6/v1.6.1.zip">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.6.1.zip">官方</a></td>
 </tr>
 </tbody></table>
 
