--- a/index.html
+++ b/index.html
@@ -4029,7 +4029,7 @@
 <h3 id="cold_drink">冷饮 (Cold Drink)</h3>
 <span class="ui single"><span class="ci cold_drink"></span></span>
 <p>冷饮由<a href="#all_in_one_machine">多功能一体机</a>低温高压下通过水瓶+<a href="#fruits">水果</a>得到。</p>
-<p>饮用后获得饱和IV效果。</p>
+<p>饮用后获得饱和IV效果和5点魔力值。</p>
 <table><thead><tr><th>产物</th><th colspan="2">配方</th></tr></thead><tbody>
 <tr><th>冷饮<br/><span class="lore">饱和IV</span></th><td>水瓶+<a href="#fruits">水果</a><td>
 <span class="ui aiom hl2" title="多功能一体机 高温低压模式">
