--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>更新日志</th></tr></thead>
 <tbody>
 <tr>
-	<td>Minecraft Java版 1.14</td>
+	<td>Minecraft Java版 19w03a</td>
 	<td>Crafting++ 1.9测试版m01d17</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d17.zip">github</a>
       | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d17.zip">官方</a></td>
