--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。《更多的合成》<span style="color:red">无明确的主题</span>，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m01d20(魔法更新)，支持Minecraft Java版 1.14。</p>
+<p>最新版本为测试版v1.9-m01d22(魔法更新)，支持Minecraft Java版 1.14。</p>
 
 
 <h3 id="how_to_start">📦 如何开始</h3>
@@ -69,9 +69,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w03a</td>
-	<td>Crafting++ 1.9测试版m01d20</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d20.zip">github</a>
-      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d20.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m01d22</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d22.zip">github</a>
+      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d22.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -97,9 +97,7 @@
 </tr>
 </tbody></table>
 
-<p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹。注意，1.14快照无法读取.zip格式资源包，因此请将资源包解压并放入resourcepacks文件夹，然后选择该资源包。不要将resources.zip放入世界存档文件夹。</p>
-
-<p>安装完成后进入游戏并按下F3+T或退出世界重进即可。服务端的操作类似，请设置为自动下载资源包，客户端无需安装数据包。</p>
+<p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹。安装完成后进入游戏并按下F3+T即可。服务端的操作类似，请设置为自动下载资源包，客户端无需安装数据包。</p>
 
 
 <p>大部分合成需使用<a href="#crafting_machine"><img src="items/crafting_machine.png" style="height:20px;" />合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
@@ -113,7 +111,7 @@
 <h3 id="acknowledge">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree 折君 天狼星black 匠魂 Gingerbread MC先生</p>
-<p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia</p>
+<p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia SorrowRain 苹果果</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：墨鱼 火星浮云 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 chyx switefaster</p>
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、盐等模组以及Bilibili与Youtube一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="https://github.com/switefaster">switefaster</a>、折君、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Herobrinexia等玩家亦对此模组有贡献。</p>
@@ -171,7 +169,7 @@
 </td></tr>
 
 <tr><th>机器</th><td>
-  <a href="#crafting_machine"><span class="ci" style="background-position: -0px -0px;"></span>合成器</a> 
+  <a href="#crafting_machine"><span class="ci" style="background-position: -32px -592px;"></span>合成器</a> 
 · <a href="#all_in_one_machine"><span class="ci" style="background-position: -16px -0px;"></span>多功能一体机</a> 
 · <a href="#trade_machine"><span class="ci" style="background-position: -32px -0px;"></span>交易机</a>
 · <a href="#mob_projector"><span class="ci" style="background-position: -48px -0px;"></span>生物投影仪</a>
@@ -278,7 +276,7 @@
 · <a href="#coordinate_recorder"><span class="ci" style="background-position: -112px -144px;"></span>坐标记录仪</a> 
 · <a href="#grafter"><span class="ci" style="background-position: -128px -144px;"></span>剪枝器</a> 
 · <a href="#glass_pickaxe"><span class="ci" style="background-position: -112px -416px;"></span>玻璃镐</a>
-· <a href="#roost"><span class="ci" style="background-position: -112px -416px;"></span>鸡窝</a>
+· <a href="#roost"><span class="ci" style="background-position: -16px -592px;"></span>鸡窝</a>
 · <a href="#flags"><span class="ci" style="background-position: -0px -576px;"></span><span class="ci" style="background-position: -16px -576px;"></span><span class="ci" style="background-position: -32px -576px;"></span><span class="ci" style="background-position: -48px -576px;"></span><span class="ci" style="background-position: -64px -576px;"></span>旗帜</a>
 · <a href="#logos"><span class="ci" style="background-position: -80px -576px;"></span><span class="ci" style="background-position: -96px -576px;"></span><span class="ci" style="background-position: -112px -576px;"></span><span class="ci" style="background-position: -128px -576px;"></span><span class="ci" style="background-position: -144px -592px;"></span>标志</a>
 · <a href="#shield_pattern"><span class="ci" style="background-position: -0px -160px;"></span><span class="ci" style="background-position: -16px -160px;"></span><span class="ci" style="background-position: -32px -160px;"></span><span class="ci" style="background-position: -48px -160px;"></span><span class="ci" style="background-position: -64px -160px;"></span><span class="ci" style="background-position: -80px -160px;"></span><span class="ci" style="background-position: -96px -160px;"></span><span class="ci" style="background-position: -112px -160px;"></span><span class="ci" style="background-position: -128px -160px;"></span><span class="ci" style="background-position: -144px -176px;"></span>盾牌图案</a>
@@ -1610,7 +1608,7 @@
 <p>可用于合成<a href="#sun_shard">日之碎片</a>、<a href="#star_wand">星之杖</a>。</p>
 
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><th>月之碎片</th><td><a href="#iron_dust">铁粉</a>+<a href="#gold_dust">金粉</a>+<a href="#diamond_dust">钻石粉</a>+<a href="#emerald_dust">绿宝石粉</a>+<a href="#quartz_dust">石英粉</a>+<br /><a href="#carbon_dust">煤粉</a>+<a href="#enchanted_golden_apple">附魔金苹果</a>+<a href="#ghast_tear">恶魂之泪</a>+末影珍珠</td>
+<tr><th>月之碎片</th><td><a href="#iron_dust">铁粉</a>+<a href="#gold_dust">金粉</a>+<a href="#diamond_dust">钻石粉</a>+<a href="#emerald_dust">绿宝石粉</a>+<a href="#quartz_dust">石英粉</a>+<br /><a href="#carbon_dust">煤粉</a>+<a href="#slime_ball">粘液球</a>+<a href="#ghast_tear">恶魂之泪</a>+末影珍珠</td>
 <td><span class="ui cm" title="合成器">
 <span class="ci iron_dust" title="铁粉"></span>
 <span class="ci gold_dust" title="金粉"></span>
@@ -1618,7 +1616,7 @@
 <span class="ci emerald_dust" title="绿宝石粉"></span>
 <span class="ci quartz_dust" title="石英粉"></span>
 <span class="ci carbon_dust" title="煤粉"></span>
-<span class="golden_apple" title="附魔金苹果"></span>
+<span class="slime_ball" title="粘液球"></span>
 <span class="ghast_tear" title="恶魂之泪"></span>
 <span class="ender_pearl" title="末影珍珠"></span>
 <span class="ci moon_shard" title="月之碎片"></span>
@@ -4478,6 +4476,7 @@
 <h3 id="broom">扫帚 (Broom)</h3>
 <span class="ui single"><span class="ci broom"></span></span>
 <p>在副手时跳起可提供漂浮效果，漂浮过程中可按住shift下降直至着陆。<em>Tia Fraere!</em></p>
+<p>不可在虚空中使用！</p>
 <p>可用于合成<a href="#shooting_star">流星丸</a>。</p>
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>扫帚</th><td>烟花火箭+木棍+干草块</td>
@@ -4498,6 +4497,7 @@
 <h3 id="shooting_star">流星丸 (Shooting Star)</h3>
 <span class="ui single"><span class="ci shooting_star"></span></span>
 <p>装备在胸甲跳起可提供悬浮效果并自动向前飞行，漂浮过程中可按住shift下降直至着陆。</p>
+<p>不可在虚空中使用！</p>
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>流星丸</th><td><a href="#wing_of_sky">天空之翼</a>+鞘翅+<a href="#broom">扫帚</a></td>
 <td><span class="ui cm" title="合成器">
